title and logo change

--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -8,9 +8,9 @@ html(lang=language, dir=dir(language))
     if !desktop
       meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
-    link(rel="shortcut icon", href=`${basePath}${offlinePath || ''}/images/favicon.ico`)
-    link(rel="icon", type="image/png", sizes="180x180", href=`${basePath}${offlinePath || ''}/images/icon_180x180.png`)
-    link(rel="apple-touch-icon", sizes="180x180", href=`${basePath}${offlinePath || ''}/images/icon_180x180.png`)
+    link(rel="shortcut icon", href=`${basePath}${offlinePath || ''}/images/favicon.png`)
+    link(rel="icon", type="image/png", sizes="180x180", href=`${basePath}${offlinePath || ''}/images/favicon.png`)
+    link(rel="apple-touch-icon", sizes="180x180", href=`${basePath}${offlinePath || ''}/images/favicon.png`)
     
     block head-script
 
