fixed image name

--- a/app/views/surveys/component/_enketo-power.pug
+++ b/app/views/surveys/component/_enketo-power.pug
@@ -2,5 +2,5 @@
 .enketo-power
   span(data-i18n='enketo.power')= t('enketo.power')  
   a(href="https://www.data123.online", title="Data 123")
-    img(src=`${basePath}${offlinePath || ''}/images/white_logo.png`, alt="Data123 logo")
+    img(src=`${basePath}${offlinePath || ''}/images/white_logo.jpg`, alt="Data123 logo")
 
