--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -4,7 +4,7 @@ block style
   link(rel='stylesheet', href=`${basePath}/css/index.css`) 
 
 block content
-  p= t("home.msg", {appTitle: title, serverName: openrosa})
+  p= t("home.msg", {appTitle: 'Enketo Express for Data 123', serverName: "Data 123"})
 
   p= t("version") + ' ' + version
 
