--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang=language, dir=dir(language))
   head
-    title= title
+    title= "Enketo Express for Data 123"
 
     meta(charset="utf-8")
     meta(name="author", content="Martijn van de Rijdt (Enketo LLC)")
